16.may (la)
      - fix #10660: Continue last session & play panel enabled
8.may (la)
      - set notehead shape from plugin framework
4.may (la)
      - fix #9342: repeat entry doesn't scroll display
27.apr (la)
      - fix #10048: Opening Page Settings causes crash
23.apr (la)
      - fix #10370: Shortcuts cannot be cleared
        implement "reset to defaults" in preferences-shortcuts dialog
20.apr (la)
      - fix #10335: importCharsetList does not appear
18.apr (la)
      - fix #10264: Select a flag and enter a note causes crash
12.apr (la)
      - fix #7814:  error with single-line-staff percussion notation
      - don't print blue frame around selected image
11.apr (la)
      - fix #7944: Instrument limit (again)
31.mar (la)
      - fix #9996: Chord navigation does not work on multistaff
30.mar (la)
      - fix #9919: error on open/read musicxml was not handled
23.mar (la)
      - fix #9883: Insert vertical frame between two parts of the same line (volta, cresc) causes crash
22.mar (la)
      - fix #9842: Tempo value not exported in Lilypond
20.mar (la)
      - fix #9852: Measure number hidden by horizontal frame
19.mar (la)
      - fix #9830: Percussion sounds not exported correctly in MusicXML
18.mar (la)
      - fix #9792: Clef not displayed after changing clefs in previous measures
      - fix #9790: Pasting notes featuring key signature change and lyrics corrupts following bar
14.mar (la)
      - fix crash when inserting vertical frame (#9765)
10.mar (la)
      - fallback to default soundfont if can't load the preferences one
09.mar (la)
      - fix playback start position when repeat in the score
25.feb (tb)
      - adding Lithuanian (mscore_lt.ts) language
19.feb (db)
      - copy editing for demo scores (usuariomuse)
13.feb (db)
      - copy editing for demo scores (usuariomuse)
03.feb (la)
      - fix #9040: Dragging note horizontally removes accidental permanently
02.feb (la)
      - improve MusicXML import of clefs